crustrace-core/tests/snapshots/ret__ret_with_name_and_level.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn test_function(x: i32) -> i32 {
    let __tracing_attr_span = tracing::span!(tracing::Level::DEBUG, "custom_span", x = x);
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| x * 2)();
    tracing :: event ! (tracing :: Level :: DEBUG , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
