crustrace-core/tests/snapshots/ret__ret_with_self_referential_return.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn self_ref() -> Box<dyn Fn() -> String> {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "self_ref");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| Box::new(|| "closure".to_string()))();
    tracing :: event ! (tracing :: Level :: INFO , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
