crustrace-core/tests/snapshots/ret__ret_with_unit_return.snap
---
source: crustrace-core/tests/ret.rs
expression: "apply_instrument(args, item)"
---
fn unit_function() {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "unit_function");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    let __tracing_attr_ret = (|| {
        println!("no return value");
    })();
    tracing :: event ! (tracing :: Level :: INFO , return_value = ? __tracing_attr_ret);
    __tracing_attr_ret
}
